# Echolace_LLM_Router

./: .echolace-project.yaml  .flake8  CHANGELOG.md  CONTRIBUTING.md  ENVIRONMENT.md  MAINTAINERS.md  Makefile  README.md  RELEASE.md  RELEASE_CHECKLIST.md  package.json  project.binding.json  project.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  reviews.txt  test_router.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BACKENDS.md  CHANGELOG.md  DEPLOYMENT.md  FAQ.md  INSTALL.md  INTEGRATION_GUIDE.md  PRODUCTION.md  PROJECT_METADATA.md  PUBLIC_API.md  PYPI_PACKAGING.md  README.md  RELEASE_CHECKLIST.md  RUNBOOK.md  STRATEGIC_ROADMAP.md  TESTING.md  TROUBLESHOOTING.md
docs/operations/: ROLLBACK.md  SECRETS.md
examples/: basic_usage.py  hardware_adaptive_routing.py  privacy_first_routing.py  provider_selection.py  semantic_intent_classification.py
llm_router/: __init__.py  __main__.py  base.py  diagnostics.py  intent.py  logging_utils.py  paths.py  privacy.py  router.py
llm_router/healing/: __init__.py  planner.py
llm_router/policies/: __init__.py  engine.py  intent_router.py  privacy_guard.py  route_planner.py
llm_router/providers/: anthropic_backend.py  gguf_backend.py  google_backend.py  gpt4all_backend.py  hf_api_backend.py  hf_local_backend.py  image_hf_local_backend.py  lmstudio_backend.py  ollama_backend.py  openai_backend_standard.py  openai_backend_streaming.py  openai_universal_backend.py
llm_router/security/: __init__.py  pii.py  redaction.py  vault.py
llm_router/telemetry/: __init__.py  benchmark_store.py  hardware_monitor.py
release-evidence/0.10.0rc0/: artifact-checksums.txt  build-artifacts.md  build.txt  checksums.sha256  pip-audit.txt  pytest.txt  rollback-rehearsal-2026-04-02.md  rollback-validation.md  rollback_steps.md  signoff-record.md  tabletop-drill-2026-04-13.md
tests/: test_backend_combinations_integration.py  test_hardware_benchmarking.py  test_healing_planner.py  test_intent_pipeline.py  test_paths.py  test_policy_engine_e2e.py  test_privacy_handling.py  test_routing_policies.py
tests/performance/: test_policy_overhead_benchmark.py
tools/: setup_helper.py
